    + Locations module
        + Map devices / racks / subnets to location;
        + Google maps integration;
    + Address linking by selected field;
    + Custom logo for site and mails;


	Enhancements, changes:
	----------------------------
	+ Folders can now contain addresses;
	+ API:
	    - Api v1 removed;
	    + If subnet gateway defined gatewayId is returned in subnet details;
	    + Automatically add nameservers to subnet results;
	    + Creating address with POST /api/appid/{subnetId}/first_free/ will automatically give first available IP;
	    + Added Search by hostname /app/appid/search/search_hostname/;
	    + Added subnet usage result for each subnet in section ;
    + Widgets:
        + New threshold widget;
        + New inactive hosts widget;
    + PowerDNS:
        + Default domain for PTR records (if hostname is not set);
        + When removing IP address additional option that removes all associated PDNS records (ip and hostname);
    + Permit normal users to manage VLANs;
    + Inactive (offline) hosts tools page;
    + MAC address normalization;
    + jQuery tables;
    + Permission delegation now only delegates changes not whole permission set;
    + Users with RWA permission can manage IP requests and receive IP request mails + changelog mails for subnet;
    + IPv4 subnet link to IPv6 for dual-stack info;

	Bugfixes:
	----------------------------
	+ PowerDNS regenerate PTR records now only updates current subnet (before whole zone);
	+ Fixed visual bug on 32-bit systems;
	+ Changed default timestamp from 0000-00-00 00:00:00 to 1970-01-01 00:00:01 to avoid SQL install errors if strict mode;

== 1.20.1

	Translations:
	----------------------------
    + French translation updated to verson 1.2;
    + German translation updated to verson 1.2;

	Bugfixes:
	----------------------------
    + Fixed upgrade bug that selected invalid auth method for AD/LDAP users;
    + Fixed LDAP problems after 1.2 upgrade;